# devproxy

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/devproxy/: __init__.py  __main__.py  config.py  parser.py  server.py
tests/: notes.txt  test_parser.py  test_path_handling.py  test_proxy.py
