[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "devproxy"
version = "0.1.0"
description = "A minimal, production-grade HTTP server in pure Python"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["src"]

